--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@
   transition: 0.3s;
   padding-top: 70px; 
 }
-
 .blank-btn{
     background: none;
     color:#888;
@@ -33,7 +32,6 @@
   background:linear-gradient(90deg,#222,#222);
   margin-right:100px;
 }
-
 #sidenav a:hover {
   color: #000;
   background: linear-gradient(90deg,#222,#ddd);
@@ -62,13 +60,13 @@ font-size:18px;
 background: transparent;
 color: #888;
 }
-
 .search-toggle:hover {
 color:#ccc;
 }
 .search-box {
 width:50%; margin:10px 0px;
 float: left;
+
 }
 .search-box input[type="text"]{
     color:#333;
@@ -80,21 +78,107 @@ float: left;
     background: linear-gradient(178deg,#aaa,#eee)
 }
 .search-box button{
-    color:#aaa;
+    color:#999;
     width:10%;
     padding:5px 0px;
     border:none;
     border-radius:0px 15px 15px 0px;
-    
     margin-left:-4px;
     background: linear-gradient(-173deg,#888,#444,#282828);
 }
+.search-box button:hover{
+    color:#ccc;
+    
+}
+.slidable:after,.slidable:before{
+     
+    display: table;
+  content: " ";
+}
+
+@media (max-width:604px){
+
+    .collapsed-search {
+display:block;
+float:right;
+margin: 10px;
+width:96%;
+margin-right: 2%;
+transition: 0.3s;
+display: none;
+}
+#rev{
+   color:#999;
+    width:8%;
+    padding:5px;
+    border:none;
+    border-radius:15px 0px 0px 15px;
+    
+    background: linear-gradient(-173deg,#888,#444,#282828);
+}
+.collapsed-search input[type="text"]{
+    margin-left:-4px;
+    color:#333;
+    width:85%;
+    padding:5px;
+    border:none; 
+   padding-left: 10px;
+    font-weight: bolder;
+    background: linear-gradient(178deg,#aaa,#eee)
+}
+.collapsed-search button[type="submit"]{
+   
+    color:#999;
+    width:7%;
+    padding:5px;
+    border:none;
+    border-radius:0px 15px 15px 0px;
+    margin-left:-4px;
+    background: linear-gradient(-173deg,#888,#444,#282828);
+}
+}
+
+
 @media (min-width:605px){
     .search-toggle{display: none;}
+    #rev{
+   display: none;
+    }
+    .collapsed-search {
+float:right;
+margin: 10px;
+width:50%;
+margin-right: 5%;
 }
+
+.collapsed-search input[type="text"]{
+    color:#333;
+    width:85%;
+    padding:5px;
+    padding-left: 8px; 
+    border:none; 
+    border-radius:15px 0px 0px 15px;
+    font-weight: bolder;
+    background: linear-gradient(178deg,#aaa,#eee)
+}
+.collapsed-search button[type="submit"]{
+    color:#999;
+    width:15%;
+    padding:5px;
+    border:none;
+    border-radius:0px 15px 15px 0px;
+    margin-left:-4px;
+    background: linear-gradient(-173deg,#888,#444,#282828);
+}
+}
+
+
 @media (min-width: 768px){
     .nav-bg{background:linear-gradient(#3c3c3c,#222);}
+    .collapsed-search{display: none;}
 }
+
+
 @media (max-width: 767px) {
 .search-box{display: none;}
     #base{
@@ -124,14 +208,3 @@ background: linear-gradient(90deg,#222,#aaa);
 border-radius: 0px 30px 30px 0px;
 }
 }
-
-.slidable:after,.slidable:before{
-     
-    display: table;
-  content: " ";
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
