--- a/css/basic.css
+++ b/css/basic.css
@@ -59,9 +59,9 @@ padding: 0px 0px 8px 0px;
 }
 @media (max-width:768px){
     .options{
-        opacity:0;
+        
         transition-delay:0.5s;
-        display: none;
+
         padding: 10px;
         margin-left:-20px;
         float:right;
@@ -70,6 +70,12 @@ padding: 0px 0px 8px 0px;
         width: 100%;
         height:100%;
     }
+    .options[display="none"]{
+        opacity:0;
+        display:none;}
+    .options[display="block"]{
+        opacity:1;
+        display:block;}
     .popbase{
         overflow: hidden;
         padding:5px 10px 10px 10px;
