--- a/fonts/fonts setup.css
+++ b/fonts/fonts setup.css
@@ -25,9 +25,8 @@
     font-family: Amperzands;
     font-style: italic;
 }
-
 .fa {
-  display: inline-block;
+
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
   text-rendering: auto;
@@ -2350,3 +2349,4 @@
   overflow: visible;
   clip: auto;
 }
+.options span{font-family: sans-serif;}
