--- a/css/basic.css
+++ b/css/basic.css
@@ -6,6 +6,7 @@ top:0;
 left: 0;
 position: fixed;
 }
+
 .Pname {
 margin-left:35px;
 float: left;
@@ -20,8 +21,10 @@ font-size: 20px;
     display:  inline-block;
 }
 .options a span{
-padding:0px 20px 0px 5px; 
+padding:0px 20px 0px 5px;
+text-decoration:none;
 }
+
 .slideToggle{
     display: none;
     padding:0px 8px 3px 8px;
@@ -45,6 +48,7 @@ padding:0px 20px 0px 5px;
     font-size: 40px;
     left:0;
 }
+
 .slidenav {
   height: 100%;
   width: 250px; /* 0 width - change this with JavaScript */
@@ -63,10 +67,11 @@ padding:0px 20px 0px 5px;
   transition: 0.3s;
 }
 .slidenav span{
-
 padding: 0px 0px 8px 0px;
 }
+
 .home{
+    float:left;
     left:0;
     top:0;
     position: static;
@@ -74,6 +79,7 @@ padding: 0px 0px 8px 0px;
     margin-left:242px;
     
 }
+
 .searchBox input{
     padding-left:5px;
     width:87%;
@@ -83,6 +89,7 @@ float: right;
 padding:10px 15px;
 width: 100%;
 }
+
 .searchCon{
     float: right;
     margin-top: -8px;
@@ -92,9 +99,9 @@ width: 100%;
 }
 .searchCon .fa-arrow-left{
     display:none;
-    background: #222;
     margin-top: 8px;
 }
+
 .carousel_container {
 width: calc(100%-100px);
 height:auto;
@@ -105,10 +112,9 @@ float:left;
 width:56%;
 height: 100%;
 }
+
 .carousel_picture{
 float: left;
-border:0x #555 solid;
-background:#fff;
 height:100%;
 transition:0.3s;
 }
@@ -122,19 +128,107 @@ transition:0.3s;
     width: 100%;
     height:100%;
 }
+
 .desc {
 float:left;
 width:44%;
 height: 100%;
 transition: 0.4s;
-background: #280069;
 }
+
+.arrows{
+    width: auto;
+    padding:20px;
+    -khtml-user-select: none;
+    -moz-user-select:none;
+    -webkit-user-select: none;
+}
+.arrows span.fa-arrow-left,.arrows span.fa-arrow-right{
+    width:10%;
+    font-size:25px;
+    padding-right:10px;
+}
+.dots{
+    float:right;   
+}
+.dots .circle{
+    float:right;
+    height: 10px;
+    width: 10px;
+    
+    
+    border-radius:5px;
+    margin-right: 10px;
+    transition: 0.3s;
+}
+.circle[active="false"]{
+        background: transparent;
+        border: 1px solid #fff;
+        
+}
+.circle[active="true"]{
+        background: #fff;
+        border: 1px solid transparent;
+}
+
+.carousel_text{
+    transition: 0.3s;
+}
+.carousel_text[active="true"]{
+    height:auto;
+    padding:20px 20px;
+    margin-bottom:20px;
+    opacity:1;
+}
+.carousel_text[active="false"]{
+    height:0px;
+    overflow: hidden;
+    opacity:0;
+    padding: 0px;
+margin-bottom:0px;
+}
+.carousel_text h1{
+    margin:0px 0px;
+}
+.carousel_text a{
+    font-weight:bold;
+    text-decoration: none;
+    
+}
+.carousel_text p{
+    font-size:20px;
+}
+
+.horizontal-list{
+    width: 100%;
+    padding:5px 10px;
+    float:left;
+    font-family: sans-serif;
+}
+.horizontal-list h1{width: 100%;}
+.horizontal-list .cards{
+    float: left;
+    width: 100%;}
+.cards .card{
+    float:left;
+    margin-right: 1%;
+    width: 17%;
+    padding:5px;
+    min-width:100px;
+    border-radius: 8px;
+    text-align: center;
+}
+.card img,.card h3,.card h4{
+    border-radius:5px;
+    float: left;
+    width:calc(100%); }
+
 
 @media(max-width:992px){
     .image,.desc{width: 100%;}
     .desc{height:auto;}
     .carousel_container{
-    margin-bottom:280px;
+    margin-bottom:300px;
     }
 }
 
@@ -145,9 +239,7 @@ background: #280069;
     }
     .Pname{margin-left: 0px;}
     .options{
-        
         transition-delay:0.5s;
-
         padding: 10px;
         margin-left:-20px;
         float:right;
@@ -170,13 +262,10 @@ background: #280069;
         float:left;
         display: block;
         width:30px;
-        background:none;
-        color: #ddd;
         font-size:25px;
     }
     .searchCon{
     padding:15px;
-    background: #222;
     left:0; 
     top:0; 
     position: fixed;
@@ -192,17 +281,13 @@ background: #280069;
         padding:5px 10px 10px 10px;
         float: right;
         width: 110px;
-        
         transition: 0.5s;
         margin-right:40px;
     }
     .options a{
-        
         transition:0.3s;
         padding:10px 2px;
         width: 100%;
-        border-bottom:1px solid gray;
-        
     }
     .home{
         margin-left: -8px;
@@ -217,49 +302,4 @@ background: #280069;
         text-align: center;
     }
     
-}
-
-
-.arrows{
-    padding:20px;
-    color: #ddd;
-    -khtml-user-select: none;
-    -moz-user-select:none;
-    -webkit-user-select: none;
-}
-.arrows span:hover{
-    color:#fff;
-    text-shadow:0px 0px 3px #ddd;
-}
-.arrows span{
-    font-size:25px;
-    padding-right:10px;
-}
-.carousel_text{
-    transition: 0.3s;
-}
-.carousel_text[active="true"]{
-    height:auto;
-    padding:20px 20px;
-    margin-bottom:20px;
-    opacity:1;
-}
-.carousel_text[active="false"]{
-    height:0px;
-    overflow: hidden;
-    opacity:0;
-    padding: 0px;
-margin-bottom:0px;
-}
-
-.carousel_text h1{
-    margin:0px 0px;
-}
-.carousel_text a{
-    font-weight:bold;
-    text-decoration: none;
-    
-}
-.carousel_text p{
-    font-size:20px;
 }
