--- a/css/theme.css
+++ b/css/theme.css
@@ -140,6 +140,23 @@ input:focus{outline: none;}
     border-radius:7px;
 }
 
+.side-one li[state="active"]{
+     background:linear-gradient(90deg,#33b5e5,#33b5e5,cyan);
+    border:1px solid;
+    border-color:transparent cyan transparent #25a5d5;
+    
+}
+.side-one li[state="inactive"]{
+ background: #33b5e5;
+    border:0.5px solid #25a5d5;
+    
+}
+.side-one li a{
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 .bottom{
         background:#222;
         color: #fff;
