--- a/css/account/main.css
+++ b/css/account/main.css
@@ -15,7 +15,7 @@
 }
 .head .uname{
     margin: 0px;
-    margin-top: 0px;
+    margin-bottom: 20px;
     width: 100vw;
     font-size: 28px;
     font-weight: bolder;
@@ -24,6 +24,7 @@
     font-family:  sans-serif;
 }
 /* expandable head end*/
+
 .side-one{
     position: fixed;
   
@@ -36,10 +37,23 @@
 .side-one li {
   padding: 7px;
   width:120px;
-  padding-left: 40px;
   transition: 0.3s;
 }
+.hidable li{
+    padding-left: 40px;
+}
+.slidable li.for-mobile{
+    display: none;
+}
+.slidable li{
+    padding-left: 30px;
+    margin-top: 20px
+}
+.slidable li a span{
+   padding-right: 10px;
+}
 /* side nav list end*/
+
 .body{
         height:auto;
     margin-left:160px;
@@ -48,71 +62,24 @@
 /* navigation div start */
 .part{
     margin-left:30px;
-    padding-top:90px;
-    
+    padding-top:110px;
     float:left;
 }
 .part h2{
     float: left;
 }
-/* navigation div start */
+.part table,
+.part table tr{width: 100%;
+    float: left;
+    width: auto;
+    margin-bottom:5px;
+}
+.part table tr{
+    padding: 10px;
+}
+/* navigation div end */
 
-.form-container input{
-border:none;
-background: #eee;
-font-weight: 700;
-padding: 10px;
-border-radius: 5px;
-}
 
-.form-container button[type="submit"]{
-border:none;
-background: #5fae05;
-color: #fff;
-font-weight: 500;
-padding:10px 15px;
-border-radius: 5px;
-}
-.form-container button[type="delete"]{
-border:none;
-background: #aa002d;
-color:#fff;
-font-weight: 700;
-font-style: italic;
-padding:10px 15px;
-border-radius: 5px;    
-}
-.form-container button[type="reset"]{
-border:none;
-background: #555;
-color: #fff;
-font-weight: 500;
-padding:10px 15px;
-border-radius: 5px;
-}
-.card{
-    border:none;
-    box-shadow: 0px 0px 3px;
-    border-radius: 10px;
-    
-}
-.card span{
-    border-radius:10px;
-    color: #fff;
-}
-.card button{
-    border: none;
-    border-radius:5px;
-    background-color: #555;
-    color: #fff;
-}
-.payment-way{
-    background: #ddd;
-    border-radius: 10px;
-}
-.form-container .note{
-    color: #b52535;
-}
 /*transferable to theme*/
 
 .form-container{
@@ -192,7 +159,6 @@ form.full input[width="more-half"]{
 
 .payment-way{
     float: left;
-    width: 100%;
     padding-left: 10px;
     padding-bottom: 10px;
     margin-bottom: 20px;
@@ -226,12 +192,39 @@ form.full input[width="more-half"]{
 
 @media (max-width:768px){
      form.full input[width="auto"]{
-    width: 95.5%;
+    
     margin-right: 0px;
 }
-    .side-one{
+    .hidable{
         display: none;
     }
+    .slidable li{
+        margin-top:30px;
+        padding-left: 0px;
+        width:auto; 
+    }
+    .slidable li.for-mobile{
+    display: block;
+}
+    .slidable li span{
+        padding:10px;
+    }
+    
+
+    .slidable li span.text{
+        display: none;
+        overflow:hidden;
+        transition: 0.3s;
+        
+                
+        border-radius: 0px 20px 20px 0px;
+    }
+    .slidable li a:hover span.text{
+        display: initial;
+       }
+    .slidable li a:hover span.icon{
+       border-radius: 0px 0px 0px 0px;
+       }
     .part{
         width: calc(100%-10px);
         margin-left: 10px;
