--- a/fonts/fonts setup.css
+++ b/fonts/fonts setup.css
@@ -11,7 +11,9 @@
       url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), 
       url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), 
       url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), 
-      url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+      url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg'),
+      url('../fonts/user-cog-solid.svg') format('svg');
+      
   font-weight: normal;
   font-style: normal;
 }
