--- a/css/basic.css
+++ b/css/basic.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0px;
+}
 .head {
 float:left;
 width:100%;
@@ -70,30 +73,32 @@ text-decoration:none;
 padding: 0px 0px 8px 0px;
 }
 
-.home{
+.body{
     float:left;
     left:0;
     top:0;
     width: 100%;
     position: static;
     padding-top: 60px;
-    margin-left:242px;
+    margin-left:250px;
     
 }
-.base{
+.body[at="id"]{
     position: fixed;
     margin-left: -8px;
     top:60px;
     float:left;
+    margin-left:0px;
+    width:100%;
 }
-.base .form{
+.body .form{
     float: right;
     margin-right:20px;
     margin-top:20px;
     padding:20px 40px;
     transition: 1s;
 }
-.base .form h2{
+.body .form h2{
     margin:10px;
     
 }
@@ -281,6 +286,13 @@ margin-bottom:0px;
     margin: 10px 0px;
     text-align: center;
 }
+.card button{
+    width: 95%;
+    font-size:18px;
+    padding: 10px 0px;
+    margin:5px 2.5%;
+    float: left;
+}
 
 .bottom{
     margin-top:30px;
@@ -336,6 +348,9 @@ padding-left: 20px;
 }
 
 @media (max-width:768px){
+    .body[at="id"]{
+        padding:0px;
+    }
     .cardA,.cardB,.cardC{
         width:31%;
         margin-left:1%;
@@ -400,12 +415,16 @@ padding-left: 20px;
         padding:10px 2px;
         width: 100%;
     }
-    .home{
+    .body{
         left:0;
-        margin-left: -8px;
-        
-        
+        margin-left: 0px;
         }
+    .carousel_container {
+        width: calc(100%-10px);
+        height:auto;
+        margin:5px;
+}
+        
     .slidenav[expand="false"]{
         overflow: scroll;
         width: 0px;}
@@ -419,7 +438,7 @@ padding-left: 20px;
     .hidenable{
         display: none;
     }
-    .base .form{
+    .body .form{
     float:left;
     margin-right:0px;
     margin-top:0px;
