--- a/css/theme.css
+++ b/css/theme.css
@@ -59,16 +59,17 @@ background: #280069;
 .slidenav span{
     color:transparent;
 }
-.home,.base{
+.home,.body{
     background:#505;
 }
-.base .form{
-    background: #93c;
+.body .form{
+    background: #fff;
     border-radius: 10px;
+    box-shadow: 1px 1px 5px #ccc;
 }
-.base .form h2{
+.body .form h2{
     font-family: sans-serif;
-    color: white;
+    color: #509;
     text-align: center;
 }
 .outer button{
@@ -83,32 +84,38 @@ opacity: 1;
 #register form input,#Login form input{
     border: none;
    border-radius:5px;
-background:#639;
-color:#fff; 
+background: #f1f1f1;
+color:#000; 
+}
+#register form input:focus,#Login form input:focus{
+    border-radius:5px;
+background: #ddd;
+letter-spacing:1px;
 }
 #register form input::placeholder,#Login form input::placeholder{
-   color:#bbb; 
+   color:#888;
+   font-weight:bold;
 }
 #register form button,#Login form button{
      border: none;
-   border-radius:10px;
-background:linear-gradient(#709,#505,#709);
-color:#fff; 
-transition: 0.3s;
+   border-radius:5px;
+background:#709;
+color:#fff;
+font-weight:bold; 
 }
 #register form button:hover,#Login form button:hover{
 
-    background:linear-gradient(#505,#709,#505);
+    background:#505;
 }
 #register form a,#Login form a{
-    color: #ddd;
+    color: #83a;
     text-decoration: none;
     font-family: sans-serif;
     font-weight: bolder;
 }
 
 #register form a:hover,#Login form a:hover{
-    text-shadow:0px 0px 1px;
+    
     text-decoration: underline;
 }
 input:focus{outline: none;}
@@ -134,7 +141,7 @@ input:focus{outline: none;}
 
 .horizontal-list{
     background: transparent;
-    color: #fff;
+    
     
 }
 
@@ -146,10 +153,7 @@ input:focus{outline: none;}
     text-shadow:0px 0px 3px #ddd;
 }
 
-.cardA,.cardB,.cardC,.cardD,.cardE{
-    box-shadow: 1px 1px 5px;
-    border-radius:7px;
-}
+
 .card img{
     border-radius:7px;
 }
@@ -260,11 +264,13 @@ border-radius: 5px;
     border:none;
     box-shadow: 0px 0px 3px;
     border-radius: 10px;
+    background: #fff;
     
 }
 .card span{
     border-radius:10px;
-    color: #fff;
+    color: white;
+    
 }
 .card button{
     border: none;
@@ -296,7 +302,13 @@ border-radius: 5px;
     color: #fff;
 }
 
-.body{background: white;}
+body{
+   
+    background-image: url('http://localhost:8383/HTML5ApplicationManual/Pic/products/bg.jpeg');
+    background-size:100%;
+    
+}
+.body{background: rgba(255,255,255,0.94);}
 
 @media (max-width:768px){
     .popbase{
