--- a/css/account/main.css
+++ b/css/account/main.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0px;
+}
 .head{position: fixed;
     width: 100%;
     left: 0;
@@ -5,14 +8,19 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
-.head img{
+
+.head img[pickup="scrolled"]{
     margin-left: 40vw;
     margin-right: 40vw;
     width:20vw;
     height: 20vw;
-    
-    border-radius:20vw;
 }
+.head img[pickup="fixed"]{
+    margin-left: 40px;
+    width:90px;
+    height:90px;
+}
+
 .head .uname{
     margin: 0px;
     margin-bottom: 20px;
@@ -22,6 +30,9 @@
     padding: 10px 0px;
     text-align: center;
     font-family:  sans-serif;
+}
+.head .uname[pickup="fixed"]{
+    margin-top: -80px
 }
 /* expandable head end*/
 
@@ -56,9 +67,10 @@
 
 .body{
         height:auto;
-    margin-left:160px;
+    margin-left:170px;
     float: left;
 }
+
 /* navigation div start */
 .part{
     margin-left:30px;
@@ -68,19 +80,47 @@
 .part h2{
     float: left;
 }
-.part table,
-.part table tr{width: 100%;
+.part ul{
+    width: 100%;
+    font-size: 20px;
+    list-style-type: none;
+    padding:0px;
+}
+
+.part ul li{
+    padding:5px 0px;
+    width: 100%;
     float: left;
-    width: auto;
-    margin-bottom:5px;
+    margin-bottom: 10px;
 }
-.part table tr{
-    padding: 10px;
+.part ul li div.p_name{
+    width: 60%;
 }
+.part ul li div.p_price{
+    width: 30%;
+}
+.part ul li div.p_close{
+    width: 10%;
+    font-family: sans-serif;
+}
+.part ul li div.p_date{
+    width: 20%;
+}
+.part ul li div.p_reciept{
+    width: 20%;
+    font-family: sans-serif;
+}
+.part ul li div{
+    float: left;
+    text-align: center;
+}
+
+
+.part ul li.lhead,.part ul li.lfoot{
+    font-weight:bold;
+}
+
 /* navigation div end */
-
-
-/*transferable to theme*/
 
 .form-container{
     width: 100%;
@@ -191,9 +231,17 @@ form.full input[width="more-half"]{
 }
 
 @media (max-width:768px){
-     form.full input[width="auto"]{
-    
+     form.full input[width="auto"]{ 
     margin-right: 0px;
+}
+.head img[pickup="fixed"]{
+    margin-left: 10px;
+    width:70px;
+    height:70px;
+}
+.head .uname[pickup="fixed"]{
+    margin-top: -60px;
+    margin-bottom: 0px;
 }
     .hidable{
         display: none;
@@ -230,6 +278,15 @@ form.full input[width="more-half"]{
         margin-left: 10px;
     }
     .body{
-        margin-left: -8px;
+        margin-left: 0px;
     }
+}
+
+@media (max-width:487px){
+   .part ul li div.p_date{
+    width: 30%;
+}
+.part ul li div.p_reciept{
+   display: none
+} 
 }
