--- a/css/basic.css
+++ b/css/basic.css
@@ -53,14 +53,13 @@ text-decoration:none;
 }
 
 .slidenav {
-  height: 100%;
+  height: calc(100%-61px);
   width: 250px; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
-  margin-top: 50px; /* Stay at the top */
+  margin-top: 61px; /* Stay at the top */
   left: 0; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 30px; /* Place content 60px from the top */
+  padding-top: 15px; /* Place content 60px from the top */
  padding-bottom: 100px;/* Place content 60px from the top */
   transition: 0.5s;
 }
@@ -121,7 +120,7 @@ padding: 0px 0px 8px 0px;
     float:left;
     margin-bottom: 10px;
     font-size: 15px;
-    font-weight: 500;
+    
     padding:10px 15px;
 }
 #register form a,#Login form a{
@@ -429,12 +428,14 @@ padding-left: 20px;
         overflow: scroll;
         width: 0px;}
     .slidenav[expand="true"]{  
-        width: 70%;
+        width: 100%;
     }
     .slidenav a{
         padding: 8px 20px;
-        width:100%;
+        width:88%;
+        text-align: center;
     }
+    
     .hidenable{
         display: none;
     }
