--- a/css/theme.css
+++ b/css/theme.css
@@ -341,7 +341,7 @@ border-radius: 5px;
 
 body{
    
-    background-image: url('http://localhost:8383/HTML5ApplicationManual/Pic/products/bg.jpeg');
+    background-image: url('https://ayushmaanjain.github.io/e-commerce/Pic/products/bg.jpeg');
     background-size:100%;
     
 }
